--- a/backend.ipynb
+++ b/backend.ipynb
@@ -9,6 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "2\n",
       "3\n",
       "4\n",
       "5\n",
@@ -44,7 +45,11 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "a = int(input())\n",
+    "for i in range(a, 34+1):\n",
+    "    print(str(i))\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -72,7 +77,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.13"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "a0002ca97fa5ee54dc2e4008fbe9eabec60bb4400642f4fca2bafe1dfe14f90e"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
